package complex;

public enum MOTO_ENGINE_TYPE {
    ELECTRICAL,
    GASOLINE
}
