package complex;

public class Wheel {
    private int size = 20;

    public Wheel() {
    }

    public Wheel(int size) {
        this.size = size;
    }

    public int getSize() {
        return size;
    }

    public void setSize(int size) {
        this.size = size;
    }
}
